plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

def dotenv = [:]
def envFile = file('.env')
if (envFile.exists()) {
	envFile.eachLine { rawLine ->
		def line = rawLine?.trim()
		if (!line || line.startsWith('#')) {
			return
		}

		def idx = line.indexOf('=')
		if (idx <= 0) {
			return
		}

		def key = line.substring(0, idx).trim()
		def value = line.substring(idx + 1).trim()
		if (key) {
			dotenv[key] = value
		}
	}
}

group = 'com.booking'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-flyway'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-amqp-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = '256m'
	jvmArgs '-XX:+UseSerialGC'
	dotenv.each { key, value ->
		if (!System.getenv().containsKey(key)) {
			environment key, value
		}
	}
}

tasks.named('bootRun') {
	jvmArgs = ['-Xms128m', '-Xmx256m', '-XX:+UseSerialGC']
	dotenv.each { key, value ->
		if (!System.getenv().containsKey(key)) {
			environment key, value
		}
	}
}
